--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</div>
 				<!-- RIGHT CONTENT OF HOME -->
 				<div class="right-home">
-					<div class="right-img"><img src="/images/mobiles.png" alt="" /></div>
+					<div class="right-img"><img src="images/mobiles.png" alt="" /></div>
 				</div>
 			</div>
 			<!-- WAVE ANIMATION -->
